--- a/portfolio2.0/src/index.css
+++ b/portfolio2.0/src/index.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+ 
+body{
+  height: 100vh;
+    width: 100vw;  
+    overflow-x: hidden;
+}
+ 
+ #root {
+    height: 100vh;
+    width: 100vw;
+  }
+
+
+
+ 
