--- a/portfolio2.0/src/components/about/about.css
+++ b/portfolio2.0/src/components/about/about.css
@@ -1,14 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 
 #tt{ 
-    font-family: 'Inter', sans-serif;
-     line-height: 1.8; 
+    font-family: 'Montserrat', sans-serif;
+         line-height: 1.8; 
     word-spacing: 2px;
 }
 
 .keyword{
-    font-weight: 500; 
+     font-weight: 500; 
     color: #0d2cb6;
-    margin-bottom: 0.5rem;
+     
 }
