--- a/portfolio2.0/src/components/projects/Projects.css
+++ b/portfolio2.0/src/components/projects/Projects.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Kanit:ital,wght@0,200;0,300;0,400;1,200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,400;0,500;1,100;1,200;1,300;1,400&display=swap');
 
-
+ 
 .te{
-    font-family: 'Kanit', sans-serif;
-
+    line-height: 1.8; 
+    font-family: 'Montserrat', sans-serif;
 }
