--- a/portfolio2.0/src/app.css
+++ b/portfolio2.0/src/app.css
@@ -1,5 +1,5 @@
-#dark{
-    background-color: rgb(56, 56, 56);
+#dark {
+  background-color: rgb(56, 56, 56);
 }
 /* Navbar dark */
 #dark .navbarc {
@@ -38,113 +38,121 @@
   color: #212121;
 }
 #dark .links {
-  color: #9E9E9E ;
+  color: #9e9e9e;
 }
 
 #dark .links:hover {
-  color: #424242 ;
+  color: #424242;
 }
 /* about dark */
 
 #dark .twu {
   color: #efefef;
-  background-color: #424242; 
+  background-color: #424242;
 }
 
-#light .aboutus{  
-  background-color: #f9f9f9; 
+#light .aboutus {
+  background-color: #f9f9f9;
 }
-#dark .aboutus{  
-    color: #efefef;
-    background-color: #424242; 
-
+#dark .aboutus {
+  color: #efefef;
+  background-color: #424242;
 }
-#dark .keyword{  
-     color: #2196F3;
-
- }
-
- /* team dark */
-  
- #light .grey900{  
-    color: #212121; 
- }
- #light .grey600    {  
-     color: #757575; 
- }
- #dark .team{  
-    background-color: rgb(56, 56, 56);
- }
-
- #dark .grey900{  
-    color: #9E9E9E; 
- }
- #dark .grey600    {  
-    color: #BDBDBD; 
- }
- #light .fc{
-    color: #3949AB; 
- }
- #dark .fc{
-    color: #B39DDB; 
- }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  /* footer dark */
-  #light .footeer{
-    background-color: #000000; 
- }
- #dark .footeer{
-  background-color: #807d7d; 
-  color:#000000;
+#dark .keyword {
+  color: #2196f3;
 }
-#light .iconss{
-  color: #fff; 
+
+/* team dark */
+
+#light .grey900 {
+  color: #212121;
 }
-#dark .iconss{ 
-color:#000000;
+#light .grey600 {
+  color: #757575;
+}
+#dark .team {
+  background-color: rgb(56, 56, 56);
+}
+
+#dark .grey900 {
+  color: #9e9e9e;
+}
+#dark .grey600 {
+  color: #bdbdbd;
+}
+#light .fc {
+  color: #3949ab;
+}
+#dark .fc {
+  color: #b39ddb;
+}
+
+/* projects dark */
+#light .projectscls {
+  background-color: #f9f9f9;
+}
+#dark .projectscls {
+  background-color: #424242;
+}
+#dark .te {
+  color: #fff;
+}
+
+#light .cardss:hover {
+  background-color: #bdbdbd;
+}
+#dark .cardss {
+  background-color: #757575;
+}
+#dark .cardss:hover {
+  background-color: #9e9e9e;
+}
+
+#dark .grey900 {
+  color: #9e9e9e;
+}
+#dark .grey600 {
+  color: #bdbdbd;
+}
+#light .fc {
+  color: #3949ab;
+}
+#dark .fc {
+  color: #b39ddb;
+}
+
+/* projects dark */
+#light .projectscls {
+  background-color: #f9f9f9;
+}
+#dark .projectscls {
+  background-color: #424242;
+}
+#dark .te {
+  color: #fff;
+}
+
+#light .cardss:hover {
+  background-color: #bdbdbd;
+}
+#dark .cardss {
+  background-color: #757575;
+}
+#dark .cardss:hover {
+  background-color: #9e9e9e;
+}
+
+/* footer dark */
+#light .footeer {
+  background-color: #000000;
+}
+#dark .footeer {
+  background-color: #807d7d;
+  color: #000000;
+}
+#light .iconss {
+  color: #fff;
+}
+#dark .iconss {
+  color: #000000;
 }
