--- a/portfolio2.0/src/app.css
+++ b/portfolio2.0/src/app.css
@@ -147,8 +147,8 @@
   background-color: #000000;
 }
 #dark .footeer {
-  background-color: #807d7d;
-  color: #000000;
+  background-color: #a3a3a3;
+  color: #181818;
 }
 #light .iconss {
   color: #fff;
