--- a/portfolio2.0/src/index.css
+++ b/portfolio2.0/src/index.css
@@ -14,6 +14,18 @@ body{
     overflow-x: hidden;
   }
 
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
 
+  *::-webkit-scrollbar-track {
+    background: #f2f2f2;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #d40202;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
 
  
